--- a/index.html
+++ b/index.html
@@ -1,3 +1,42 @@
 ---
-layout: front
+layout: default
+title: RyppleX
 ---
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RyppleX</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to RyppleX</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Our Mission</h2>
+            <p>Promoting sustainability through innovative water conservation solutions.</p>
+        </section>
+
+        <section>
+            <h2>Latest Projects</h2>
+            <p>Explore our latest work on water preservation and ecological restoration.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 RyppleX. All rights reserved.</p>
+    </footer>
+</body>
+</html>
