--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@ title: RyppleX
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RyppleX</title>
+    <title>RyppleX - The Future of Sustainability</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <style>
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            color: #fff;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+        }
+        header {
+            padding: 2rem 0;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        a {
+            color: #00d4ff;
+            text-decoration: none;
+        }
+        section {
+            padding: 2rem;
+        }
+        footer {
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -26,17 +57,17 @@ title: RyppleX
     <main>
         <section>
             <h2>Our Mission</h2>
-            <p>Promoting sustainability through innovative water conservation solutions.</p>
+            <p>Revolutionizing sustainability through advanced water conservation solutions with futuristic innovation.</p>
         </section>
 
         <section>
             <h2>Latest Projects</h2>
-            <p>Explore our latest work on water preservation and ecological restoration.</p>
+            <p>Explore our groundbreaking work on eco-technology and next-gen water preservation techniques.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 RyppleX. All rights reserved.</p>
+        <p>&copy; 2025 RyppleX - Shaping the Future of Sustainability.</p>
     </footer>
 </body>
 </html>
