--- a/index.html
+++ b/index.html
@@ -48,16 +48,28 @@ title: RyppleX
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
+        <section id="home">
             <h2>Our Mission</h2>
-            <p>Revolutionizing sustainability through advanced water conservation solutions with futuristic innovation.</p>
+            <p>Revolutionizing sustainability through advanced water conservation solutions with a futuristic vision.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>RyppleX is an open-source consortium dedicated to providing tools for wetlands detection, empowering conservation efforts through data-driven technologies.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Email: contact@rypplex.org</p>
+            <p>GitHub: <a href="https://github.com/rypplex">github.com/rypplex</a></p>
+            <p>Location: Remote, Global</p>
         </section>
 
         <section>
