--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ title: RyppleX
 
         <section id="about">
             <h2>About Us</h2>
-            <p>RyppleX is an open-source consortium dedicated to providing tools for wetlands detection, empowering conservation efforts through data-driven technologies.</p>
+            <p>RyppleX is an open-source consortium dedicated to providing tools for detection of waterbodies on a landscape, empowering conservation efforts through data-driven technologies.</p>
         </section>
 
         <section id="contact">
